myStyle.css
html {
	min-height: 100%;
	background-color: white;
	position: relative;
}

body {
	margin: 0 0 60px;
}

header {
	background: #d0e0d0;
	border-bottom: double 3px #aba;
	border-left: solid 1px #9a9;
	border-right: solid 1px #565;
	border-top: solid 1px #9a9;
	font: italic normal 230% 'Times New Roman', Times, serif;
	letter-spacing: 0.2em;
	margin: 0;
	padding: 0px 10px 0px 60px;
}

center {
	margin: 50px 15%;
}

input.home, button {
	text-align: center;
	border: grey solid 1px;
	border-radius: 10px;
	margin-right: 25%;
    margin-left: 25%;
	margin-top: 5px;
	padding: 10px;
	width: 50%;
	font-weight: bold;
	font-size: 14px;
	
	/*Note: Dans le cas de l'utilisation d'un langage de pre-processing de CSS, faire une fonction pour handler les gradients*/
	background: white; /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(white, lightgrey); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(white, lightgrey); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(white, lightgrey); /* For Firefox 3.6 to 15 */
    background: linear-gradient(white, lightgrey); /* Standard syntax */
}

input[type="submit"]:hover, button:hover {
	background: #e6e6e6; /* For browsers that do not support gradients */
    background: -webkit-linear-gradient(#e6e6e6, #bfbfbf); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#e6e6e6, #bfbfbf); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#e6e6e6, #bfbfbf); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#e6e6e6, #bfbfbf); /* Standard syntax */
}

button.half {
	width: 25%;
	display: inline-block;
	margin: 0%;
}

.prescreen {
	color: grey;
	margin-left: 10%;
	margin-right: 10%;
}

#score {
	float: left;
}

#chrono {
	float: right;
}

#screen {
	margin-top: 10px;
	border-radius: 10px;
}

#quiz {
	margin-right: 25%;
	margin-left: 25%;
	margin-bottom: 25%;
	padding: 0 10px 10px 10px;
	border: lightgrey solid 1px;
	border-radius: 20px;
}

h1#titre {
	margin-bottom: 5px;
}

footer {
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 60px;   /* Height of the footer */
}

#standalonetext {
	margin: 5% 10%;
	line-height: 25px;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

a:hover:not(.active) {
    background-color: #111;
}

.active {
background-color:#4CAF50;
}

